--- a/pkg/admin/gui/front-end/html/typeCredential.html
+++ b/pkg/admin/gui/front-end/html/typeCredential.html
@@ -4,7 +4,7 @@
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
-            <input type="password" id="addCredentialValue" name="addCredentialValue" class="form-control">
+            <input type="password" id="addCredentialValue" name="addCredentialValue" class="form-control" value="{{ index $.modalElement "addCredentialValue" }}">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialValue', this)"><i class="far fa-eye-slash"></i></button>
         </div>
     </div>
@@ -17,7 +17,7 @@
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
-            <input type="password" id="editCredentialValue" name="editCredentialValue" class="form-control">
+            <input type="password" id="editCredentialValue" name="editCredentialValue" class="form-control" value="{{ if .modalElement }}{{ index .modalElement "editCredentialValue" }}{{ else }}{{ .Value }}{{ end }}">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialValue', this)"><i class="far fa-eye-slash"></i></button>
         </div>
     </div>
@@ -81,11 +81,11 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "login" }} :</label>
-        <input type="text" id="addCredentialValue1" name="addCredentialValue1" class="form-control">
+        <input type="text" id="addCredentialValue1" name="addCredentialValue1" class="form-control" value="{{ index $.modalElement "addCredentialValue1" }}">
         <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
-            <input type="password" id="addCredentialValue2" name="addCredentialValue2" class="form-control">
+            <input type="password" id="addCredentialValue2" name="addCredentialValue2" class="form-control" value="{{ index $.modalElement "addCredentialValue2" }}">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('addCredentialValue2', this)"><i class="far fa-eye-slash"></i></button>
         </div>
     </div>
@@ -97,11 +97,12 @@
     <hr style="border-top: 1px solid #ababab;">
     <div class="form-input">
         <label class="col-form-label">{{ index .tab "login" }} :</label>
-        <input type="text" id="editCredentialValue1" name="editCredentialValue1" class="form-control">
+        <input type="text" id="editCredentialValue1" name="editCredentialValue1" class="form-control" value="{{ if .modalElement }}{{ index .modalElement "editCredentialValue1" }}{{ else }}{{ .Value }}{{ end }}">
+
         <hr style="border-top: 1px solid #ababab;">
         <label class="col-form-label">{{ index .tab "passwordStr" }} :</label>
         <div class="input-group">
-            <input type="password" id="editCredentialValue2" name="editCredentialValue2" class="form-control">
+            <input type="password" id="editCredentialValue2_{{ .ID }}" name="editCredentialValue2" class="form-control" value="{{ if .modalElement }}{{ index .modalElement "editCredentialValue2" }}{{ else }}{{ .Value }}{{ end }}">
             <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editCredentialValue2_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
         </div>
     </div>
