--- a/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
+++ b/pkg/admin/gui/front-end/html/cloud_instance_management_page.html
@@ -41,51 +41,61 @@
           <div class="modal-body">
           <div class="form-input">
             <label class="col-form-label">{{ index .tab "name" }} :</label>
-            <input type="text" name="addCloudInstanceName" class="form-control" required>
+            <input type="text" name="addCloudInstanceName" class="form-control" required value="{{ index $.modalElement "addCloudInstanceName" }}">
           </div>
           <hr style="border-top: 1px solid #ababab;">
           <div class="form-input">
             <label class="col-form-label">{{ index .tab "type" }} :</label>
             <select name="addCloudInstanceType" id="addCloudInstanceType" class="form-select">
-              <option value="" disabled selected>{{ index .tab "selectTypeCloudInstance" }}</option>
+              <option value="" disabled {{ if $.modalElement }}{{ if eq (index $.modalElement "addCloudInstanceType") "" }}selected{{ end }}{{ else }}selected{{ end }}>{{ index .tab "selectTypeCloudInstance" }}</option>
               {{ range .ListTypeCloudInstance }}
-                  <option value="{{ . }}">{{ . }}</option>
+                  <option value="{{ . }}" {{ if $.modalElement }}{{ if eq (index $.modalElement "addCloudInstanceType") . }}selected{{ end }}{{ end }}>{{ . }}</option>
               {{ end }}
             </select>
         </div>
           <hr style="border-top: 1px solid #ababab;">
           <div class="form-input">
             <label class="col-form-label">{{ index .tab "key" }} :</label>
-            <input type="text" name="addCloudInstanceKey" class="form-control">
+            <input type="text" name="addCloudInstanceKey" class="form-control" value="{{ index $.modalElement "addCloudInstanceKey" }}">
           </div>
           <hr style="border-top: 1px solid #ababab;">
           <div class="form-input">
             <label class="col-form-label">{{ index .tab "secretKey" }} :</label>
-            <input type="text" name="addCloudInstanceSecret" class="form-control">
+            <input type="text" name="addCloudInstanceSecret" class="form-control" value="{{ index $.modalElement "addCloudInstanceSecret" }}">
           </div>
           <hr style="border-top: 1px solid #ababab;">
           <div class="form-input">
             <label class="col-form-label">{{ index .tab "bucket" }} :</label>
-            <input type="text" name="addCloudInstanceBucket" class="form-control" required>
+            <input type="text" name="addCloudInstanceBucket" class="form-control" required value="{{ index $.modalElement "addCloudInstanceBucket" }}">
           </div>
           <hr style="border-top: 1px solid #ababab;">
           <div class="form-input">
               <label class="col-form-label">{{ index .tab "options" }} :</label>
               <div id="infoContainer">
+                {{ $keys := index $.modalElement "optionsKey[]" }}
+                {{ $vals := index $.modalElement "optionsValue[]" }}
+                {{ if or $keys $vals }}
+                  {{ range $i,$k := $keys }}
                   <div class="input-group mb-2">
-                      <input type="text" name="optionsKey[]" class="form-control" placeholder="{{ index .tab "fieldName" }}">
-                      <input type="text" name="optionsValue[]" class="form-control" placeholder="{{ index .tab "value" }}">
+                      <input type="text" name="optionsKey[]" class="form-control" value="{{ $k }}" placeholder="{{ index $.tab "fieldName" }}">
+                      <input type="text" name="optionsValue[]" class="form-control" value="{{ if $vals }}{{ index $vals $i }}{{ end }}" placeholder="{{ index $.tab "value" }}">
                     <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
                         <i class="bi bi-trash"></i>
                       </button>
                   </div>
-              </div>
-              <button type="button"
-                      class="btn btn-outline-primary btn-sm"
-                      onclick="addField(this)">
-                  {{ index .tab "add" }}
-              </button>
-          </div>
+                  {{ end }}
+                {{ else }}
+                  <div class="input-group mb-2">
+                    <input type="text" name="optionsKey[]" class="form-control" placeholder="{{ index $.tab "fieldName" }}">
+                    <input type="text" name="optionsValue[]" class="form-control" placeholder="{{ index $.tab "value" }}">
+                    <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
+                      <i class="bi bi-trash"></i>
+                    </button>
+                  </div>
+                {{ end }}
+                </div>
+              <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this)">{{ index .tab "add" }}</button>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index .tab "close" }}</button>
@@ -236,6 +246,7 @@
                     <div class="modal-content">
                       <form method="post" class="p-3 border rounded bg-light">
                         <input type="hidden" name="editCloudInstanceID" value="{{ .ID }}">
+                        {{ $me := and (eq $.modalOpen (printf "editCloudInstanceModal_%d" .ID)) $.modalElement }}
                         <div class="modal-header">
                           <h5 class="modal-title" id="editCloudInstanceModalLabel">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -243,50 +254,72 @@
                         <div class="modal-body">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "name" }} :</label>
-                            <input type="text" name="editCloudInstanceName" class="form-control" required value="{{ .Name }}">
+                            <input type="text" name="editCloudInstanceName" class="form-control" required value="{{ if $me }}{{ index $me "editCloudInstanceName" }}{{ else }}{{ .Name }}{{ end }}">
                           </div>
                           <hr style="border-top: 1px solid #ababab;">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "type" }} :</label>
                             <select name="editCloudInstanceType" class="form-select">
-                              <option value="" disabled>{{ index $.tab "selectTypeCloudInstance" }}</option>
+                              <option value="" disabled {{ if $me }}{{ if eq (index $me "editCloudInstanceType") "" }}selected{{ end }}{{ end }}>{{ index $.tab "selectTypeCloudInstance" }}</option>
                               {{ range $.ListTypeCloudInstance }}
-                                  <option value="{{ . }}" {{ if eq $.Type . }}selected{{ end }}>{{ . }}</option>
+                                  <option value="{{ . }}" {{ if $me }}{{ if eq (index $me "editCloudInstanceType") . }}selected{{ end }}{{ else if eq $.Type . }}selected{{ end }}>{{ . }}</option>
                               {{ end }}
                             </select>
                           </div>
                           <hr style="border-top: 1px solid #ababab;">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "key" }} :</label>
-                            <input type="text" name="editCloudInstanceKey" class="form-control" value="{{ .Key }}">
+                            <input type="text" name="editCloudInstanceKey" class="form-control" value="{{ if $me }}{{ index $me "editCloudInstanceKey" }}{{ else }}{{ .Key }}{{ end }}">
                           </div>
                           <hr style="border-top: 1px solid #ababab;">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "secretKey" }} :</label>
-                            <input type="text" name="editCloudInstanceSecret" class="form-control" value="{{ .Secret }}">
+                            <input type="text" name="editCloudInstanceSecret" class="form-control" value="{{ if $me }}{{ index $me "editCloudInstanceSecret" }}{{ else }}{{ .Secret }}{{ end }}">
                           </div>
                           <hr style="border-top: 1px solid #ababab;">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "bucket" }} :</label>
-                            <input type="text" name="editCloudInstanceBucket" class="form-control" value="{{ index .Options "bucket" }}">
+                            <input type="text" name="editCloudInstanceBucket" class="form-control" value="{{ if $me }}{{ index $me "editCloudInstanceBucket" }}{{ else }}{{ index .Options "bucket" }}{{ end }}">
                           </div>
                           <hr style="border-top: 1px solid #ababab;">
                           <div class="form-input">
                             <label class="col-form-label">{{ index $.tab "options" }} :</label>
                             <div id="editInfoContainer_{{ .ID }}">
-                              {{ range $key, $value := .Options }}
-                                <div class="input-group mb-2">
-                                  <input type="text" name="editOptionsKey[]" class="form-control" value="{{ $key }}">
-                                  <input type="text" name="editOptionsValue[]" class="form-control" value="{{ $value }}">
-                                  <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
-                                    <i class="bi bi-trash"></i>
-                                  </button>
+                              {{ if $me }}
+                                {{ $keys := index $me "editOptionsKey[]" }}
+                                {{ $vals := index $me "editOptionsValue[]" }}
+                                {{ if or $keys $vals }}
+                                  {{ range $i,$k := $keys }}
+                                    <div class="input-group mb-2">
+                                      <input type="text" name="editOptionsKey[]" class="form-control" value="{{ $k }}">
+                                      <input type="text" name="editOptionsValue[]" class="form-control" value="{{ if $vals }}{{ index $vals $i }}{{ end }}">
+                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
+                                        <i class="bi bi-trash"></i>
+                                      </button>
+                                    </div>
+                                  {{ end }}
+                                  {{ else }}
+                                    <div class="input-group mb-2">
+                                      <input type="text" name="editOptionsKey[]" class="form-control">
+                                      <input type="text" name="editOptionsValue[]" class="form-control">
+                                      <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
+                                        <i class="bi bi-trash"></i>
+                                      </button>
+                                    </div>
+                                  {{ end }}
+                                  {{ else }}
+                                    {{ range $key,$value := .Options }}
+                                      <div class="input-group mb-2">
+                                        <input type="text" name="editOptionsKey[]" class="form-control" value="{{ $key }}">
+                                        <input type="text" name="editOptionsValue[]" class="form-control" value="{{ $value }}">
+                                        <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
+                                          <i class="bi bi-trash"></i>
+                                        </button>
+                                      </div>
+                                    {{ end }}
+                                  {{ end }}
                                 </div>
-                              {{ end }}
-                            </div>
-                            <button type="button"
-                                    class="btn btn-outline-primary btn-sm"
-                                    onclick="addField(this)">
+                            <button type="button" class="btn btn-outline-primary btn-sm" onclick="addField(this)">
                                 {{ index $.tab "add" }}
                             </button>
                           </div>
