--- a/pkg/admin/gui/front-end/html/server_management_page.html
+++ b/pkg/admin/gui/front-end/html/server_management_page.html
@@ -41,60 +41,62 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "servers" }} :</label>
-                <input type="text" name="addServerName" class="form-control" required>
+                  <label class="col-form-label">{{ index .tab "servers" }} :</label>
+                  <input type="text" name="addServerName" class="form-control" required value="{{ index .modalElement "addServerName" }}">
                 </div>
-                <hr style="border-top: 1px solid #ababab;">
 
+                <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                 <label class="col-form-label">{{ index .tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                 <select name="addServerProtocol" id="addServerProtocol" class="form-select protocolConfiguration-select" required>
-                    <option value="" disabled selected>{{ index .tab "selectProto" }}</option>
-                    <option value="r66">R66</option>
-                    <option value="r66-tls">R66-TLS</option>
-                    <option value="sftp">SFTP</option>
-                    <option value="http">HTTP</option>
-                    <option value="https">HTTPS</option>
-                    <option value="ftp">FTP</option>
-                    <option value="ftps">FTPS</option>
-                    <option value="pesit">PeSIT</option>
-                    <option value="pesit-tls">PeSIT-TLS</option>
+                    <option value="" disabled {{ if not (index .modalElement "addServerProtocol") }}selected{{ end }}>{{ index .tab "selectProto" }}</option>
+                    <option value="r66" {{ if eq (index .modalElement "addServerProtocol") "r66" }}selected{{ end }}>R66</option>
+                    <option value="r66-tls" {{ if eq (index .modalElement "addServerProtocol") "r66-tls" }}selected{{ end }}>R66-TLS</option>
+                    <option value="sftp" {{ if eq (index .modalElement "addServerProtocol") "sftp" }}selected{{ end }}>SFTP</option>
+                    <option value="http" {{ if eq (index .modalElement "addServerProtocol") "http" }}selected{{ end }}>HTTP</option>
+                    <option value="https" {{ if eq (index .modalElement "addServerProtocol") "https" }}selected{{ end }}>HTTPS</option>
+                    <option value="ftp" {{ if eq (index .modalElement "addServerProtocol") "ftp" }}selected{{ end }}>FTP</option>
+                    <option value="ftps" {{ if eq (index .modalElement "addServerProtocol") "ftps" }}selected{{ end }}>FTPS</option>
+                    <option value="pesit" {{ if eq (index .modalElement "addServerProtocol") "pesit" }}selected{{ end }}>PeSIT</option>
+                    <option value="pesit-tls" {{ if eq (index .modalElement "addServerProtocol") "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                 </select>
                 </div>
-                <hr style="border-top: 1px solid #ababab;">
 
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
-                <input type="text" name="addServerHost" class="form-control" required>
-                </div>
                 <hr style="border-top: 1px solid #ababab;">
+                <div class="form-input">
+                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
+                  <input type="text" name="addServerHost" class="form-control" required value="{{ index .modalElement "addServerHost" }}">
+                </div>
 
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
-                <input type="text" name="addServerPort" class="form-control" required>
-                </div>
                 <hr style="border-top: 1px solid #ababab;">
+                <div class="form-input">
+                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
+                  <input type="text" name="addServerPort" class="form-control" required value="{{ index .modalElement "addServerPort" }}">
+                </div>
 
-                <div class="form-input">
-                <label class="col-form-label">{{ index .tab "rootDir" }} :</label>
-                <input type="text" name="addServerRootDir" class="form-control" required>
-                </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "receiveDir" }} :</label>
-                <input type="text" name="addServerReceiveDir" class="form-control" required>
+                  <label class="col-form-label">{{ index .tab "rootDir" }} :</label>
+                  <input type="text" name="addServerRootDir" class="form-control" required value="{{ index .modalElement "addServerRootDir" }}">
                 </div>
+
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "sendDir" }} :</label>
-                <input type="text" name="addServerSendDir" class="form-control" required>
+                  <label class="col-form-label">{{ index .tab "receiveDir" }} :</label>
+                  <input type="text" name="addServerReceiveDir" class="form-control" required value="{{ index .modalElement "addServerReceiveDir" }}">
                 </div>
+
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
-                <label class="col-form-label">{{ index .tab "tmpReceiveDir" }} :</label>
-                <input type="text" name="addServerTmpReceiveDir" class="form-control" required>
+                  <label class="col-form-label">{{ index .tab "sendDir" }} :</label>
+                  <input type="text" name="addServerSendDir" class="form-control" required value="{{ index .modalElement "addServerSendDir" }}">
+                </div>
+
+                <hr style="border-top: 1px solid #ababab;">
+                <div class="form-input">
+                  <label class="col-form-label">{{ index .tab "tmpReceiveDir" }} :</label>
+                  <input type="text" name="addServerTmpReceiveDir" class="form-control" required value="{{ index .modalElement "addServerTmpReceiveDir" }}">
                 </div>
                 {{ template "addR66Server" . }}
                 {{ template "addSftpServer" . }}
@@ -333,64 +335,65 @@
                     <div class="modal-content">
                         <form method="post" class="p-3 border rounded bg-light">
                         <input type="hidden" name="editServerID" value="{{ .ID }}">
+                        {{ $me := and (eq $.modalOpen (printf "editServerModal_%d" .ID)) $.modalElement }}
                         <div class="modal-header">
                             <h5 class="modal-title" id="editServerModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <div class="form-input">
-                            <label class="col-form-label">{{ index $.tab "servers" }} :</label>
-                            <input type="text" name="editServerName" class="form-control" required value="{{ .Name }}">
+                              <label class="col-form-label">{{ index $.tab "servers" }} :</label>
+                              <input type="text" name="editServerName" class="form-control" required value="{{ if $me }}{{ index $me "editServerName" }}{{ else }}{{ .Name }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
                             <label class="col-form-label">{{ index $.tab "protocol" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i> :</label>
                             <select name="editServerProtocol" class="form-select protocolConfiguration-select" required>
-                                <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
-                                <option value="r66-tls" {{ if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
-                                <option value="sftp" {{ if eq .Protocol "sftp" }}selected{{ end }}>SFTP</option>
-                                <option value="http" {{ if eq .Protocol "http" }}selected{{ end }}>HTTP</option>
-                                <option value="https" {{ if eq .Protocol "https" }}selected{{ end }}>HTTPS</option>
-                                <option value="ftp" {{ if eq .Protocol "ftp" }}selected{{ end }}>FTP</option>
-                                <option value="ftps" {{ if eq .Protocol "ftps" }}selected{{ end }}>FTPS</option>
-                                <option value="pesit" {{ if eq .Protocol "pesit" }}selected{{ end }}>PeSIT</option>
-                                <option value="pesit-tls" {{ if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
+                                <option value="r66" {{ if $me }}{{ if eq (index $me "editServerProtocol") "r66" }}selected{{ end }}{{ else if eq .Protocol "r66" }}selected{{ end }}>R66</option>
+                                <option value="r66-tls" {{ if $me }}{{ if eq (index $me "editServerProtocol") "r66-tls" }}selected{{ end }}{{ else if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
+                                <option value="sftp" {{ if $me }}{{ if eq (index $me "editServerProtocol") "sftp" }}selected{{ end }}{{ else if eq .Protocol "sftp" }}selected{{ end }}>SFTP</option>
+                                <option value="http" {{ if $me }}{{ if eq (index $me "editServerProtocol") "http" }}selected{{ end }}{{ else if eq .Protocol "http" }}selected{{ end }}>HTTP</option>
+                                <option value="https" {{ if $me }}{{ if eq (index $me "editServerProtocol") "https" }}selected{{ end }}{{ else if eq .Protocol "https" }}selected{{ end }}>HTTPS</option>
+                                <option value="ftp" {{ if $me }}{{ if eq (index $me "editServerProtocol") "ftp" }}selected{{ end }}{{ else if eq .Protocol "ftp" }}selected{{ end }}>FTP</option>
+                                <option value="ftps" {{ if $me }}{{ if eq (index $me "editServerProtocol") "ftps" }}selected{{ end }}{{ else if eq .Protocol "ftps" }}selected{{ end }}>FTPS</option>
+                                <option value="pesit" {{ if $me }}{{ if eq (index $me "editServerProtocol") "pesit" }}selected{{ end }}{{ else if eq .Protocol "pesit" }}selected{{ end }}>PeSIT</option>
+                                <option value="pesit-tls" {{ if $me }}{{ if eq (index $me "editServerProtocol") "pesit-tls" }}selected{{ end }}{{ else if eq .Protocol "pesit-tls" }}selected{{ end }}>PeSIT-TLS</option>
                             </select>
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
-                            <input type="text" name="editServerHost" class="form-control" required value="{{ .Address.Host }}">
+                              <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i> :</label>
+                              <input type="text" name="editServerHost" class="form-control" required value="{{ if $me }}{{ index $me "editServerHost" }}{{ else }}{{ .Address.Host }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
-                            <input type="text" name="editServerPort" class="form-control" required value="{{ .Address.Port }}">
+                              <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i> :</label>
+                              <input type="text" name="editServerPort" class="form-control" required value="{{ if $me }}{{ index $me "editServerPort" }}{{ else }}{{ .Address.Port }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
-                            <input type="text" name="editServerRootDir" class="form-control" required value="{{ .RootDir }}">
+                              <label class="col-form-label">{{ index $.tab "rootDir" }} :</label>
+                              <input type="text" name="editServerRootDir" class="form-control" required value="{{ if $me }}{{ index $me "editServerRootDir" }}{{ else }}{{ .RootDir }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
-                            <input type="text" name="editServerReceiveDir" class="form-control" required value="{{ .ReceiveDir }}">
+                              <label class="col-form-label">{{ index $.tab "receiveDir" }} :</label>
+                              <input type="text" name="editServerReceiveDir" class="form-control" required value="{{ if $me }}{{ index $me "editServerReceiveDir" }}{{ else }}{{ .ReceiveDir }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
-                            <input type="text" name="editServerSendDir" class="form-control" required value="{{ .SendDir }}">
+                              <label class="col-form-label">{{ index $.tab "sendDir" }} :</label>
+                              <input type="text" name="editServerSendDir" class="form-control" required value="{{ if $me }}{{ index $me "editServerSendDir" }}{{ else }}{{ .SendDir }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input mt-4">
-                            <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
-                            <input type="text" name="editServerTmpReceiveDir" class="form-control" required value="{{ .TmpReceiveDir }}">
+                              <label class="col-form-label">{{ index $.tab "tmpReceiveDir" }} :</label>
+                              <input type="text" name="editServerTmpReceiveDir" class="form-control" required value="{{ if $me }}{{ index $me "editServerTmpReceiveDir" }}{{ else }}{{ .TmpReceiveDir }}{{ end }}">
                             </div>
-                            {{ template "editR66Server" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
-                            {{ template "editFtpServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "TLSRequirement" $.TLSRequirement) }}
-                            {{ template "editPesitServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT) }}
-                            {{ template "editSftpServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
+                            {{ template "editR66Server" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "modalElement" $me) }}
+                            {{ template "editFtpServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "TLSRequirement" $.TLSRequirement "modalElement" $me) }}
+                            {{ template "editPesitServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions "CompatibilityModePeSIT" $.CompatibilityModePeSIT "modalElement" $me) }}
+                            {{ template "editSftpServer" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs "modalElement" $me) }}
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
