--- a/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_rules_management_page.html
@@ -43,44 +43,44 @@
             <div class="modal-body">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "rules" }} :</label>
-                    <input type="text" name="addRuleName" class="form-control" required>
+                    <input type="text" name="addRuleName" class="form-control" required value="{{ index $.modalElement "addRuleName" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input d-flex align-items-center">
                     <label class="col-form-label me-3">{{ index .tab "isSend" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipIsSend" }}"></i> :</label>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="addRuleIsSend" id="addRuleIsSendTrue" value="true">
+                        <input class="form-check-input" type="radio" name="addRuleIsSend" id="addRuleIsSendTrue" value="true" {{ if $.modalElement }}{{ if or (eq (index $.modalElement "addRuleIsSend") "true") (eq (index $.modalElement "addRuleIsSend") true) }}checked{{ end }}{{ end }}>
                         <label class="form-check-label me-2" for="addRuleIsSendTrue">{{ index .tab "send" }}</label>
                     </div>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="radio" name="addRuleIsSend" id="addRuleIsSendFalse" value="false">
+                        <input class="form-check-input" type="radio" name="addRuleIsSend" id="addRuleIsSendFalse" value="false" {{ if $.modalElement }}{{ if or (eq (index $.modalElement "addRuleIsSend") "false") (eq (index $.modalElement "addRuleIsSend") false) }}checked{{ end }}{{ end }}>
                         <label class="form-check-label" for="addRuleIsSendFalse">{{ index .tab "receive" }}</label>
                     </div>
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "comment" }} :</label>
-                    <input type="text" name="addRuleComment" class="form-control">
+                    <input type="text" name="addRuleComment" class="form-control" value="{{ index $.modalElement "addRuleComment" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "path" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipPath" }}"></i> :</label>
-                    <input type="text" name="addRulePath" class="form-control">
+                    <input type="text" name="addRulePath" class="form-control" value="{{ index $.modalElement "addRulePath" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "localDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipLocalDir" }}"></i> :</label>
-                    <input type="text" name="addRuleLocalDir" class="form-control">
+                    <input type="text" name="addRuleLocalDir" class="form-control" value="{{ index $.modalElement "addRuleLocalDir" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "remoteDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipRemoteDir" }}"></i> :</label>
-                    <input type="text" name="addRuleRemoteDir" class="form-control">
+                    <input type="text" name="addRuleRemoteDir" class="form-control" value="{{ index $.modalElement "addRuleRemoteDir" }}">
                 </div>
                 <hr style="border-top: 1px solid #ababab;">
                 <div class="form-input">
                     <label class="col-form-label">{{ index .tab "tmpLocalRcvDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipTmpLocalRcvDir" }}"></i> :</label>
-                    <input type="text" name="addRuleTmpLocalRcvDir" class="form-control">
+                    <input type="text" name="addRuleTmpLocalRcvDir" class="form-control" value="{{ index $.modalElement "addRuleTmpLocalRcvDir" }}">
                 </div>
             </div>
             <div class="modal-footer">
@@ -244,6 +244,7 @@
                     <div class="modal-content">
                         <form method="post" class="p-3 border rounded bg-light">
                         <input type="hidden" name="editRuleID" value="{{ .ID }}">
+                        {{ $me := and (eq $.modalOpen (printf "editRuleModal_%d" .ID)) $.modalElement }}
                         <div class="modal-header">
                             <h5 class="modal-title" id="editRuleModalLabel_{{ .ID }}">{{ index $.tab "edit" }}: {{ .Name }}</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -251,44 +252,44 @@
                         <div class="modal-body">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "rules" }} :</label>
-                                <input type="text" name="editRuleName" class="form-control" required value="{{ .Name }}">
+                                <input type="text" name="editRuleName" class="form-control" required value="{{ if $me }}{{ index $me "editRuleName" }}{{ else }}{{ .Name }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input d-flex align-items-center">
                                 <label class="col-form-label me-3">{{ index $.tab "isSend" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipIsSend" }}"></i> :</label>
                                 <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="editRuleIsSend" id="editRuleIsSendTrue_{{ .ID }}" value="true" {{ if .IsSend }}checked{{ end }}>
+                                  <input class="form-check-input" type="radio" name="editRuleIsSend" id="editRuleIsSendTrue_{{ .ID }}" value="true" {{ if $me }}{{ $v := index $me "editRuleIsSend" }}{{ if or (eq $v "true") (eq $v true) }}checked{{ end }}{{ else if .IsSend }}checked{{ end }}>
                                   <label class="form-check-label me-2" for="editRuleIsSendTrue_{{ .ID }}">{{ index $.tab "send" }}</label>
                               </div>
                               <div class="form-check form-check-inline">
-                                  <input class="form-check-input" type="radio" name="editRuleIsSend" id="editRuleIsSendFalse_{{ .ID }}" value="false" {{ if not .IsSend }}checked{{ end }}>
+                                  <input class="form-check-input" type="radio" name="editRuleIsSend" id="editRuleIsSendFalse_{{ .ID }}" value="false" {{ if $me }}{{ $v := index $me "editRuleIsSend" }}{{ if or (eq $v "false") (eq $v false) }}checked{{ end }}{{ else if not .IsSend }}checked{{ end }}>
                                   <label class="form-check-label" for="editRuleIsSendFalse_{{ .ID }}">{{ index $.tab "receive" }}</label>
                               </div>
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "comment" }} :</label>
-                                <input type="text" name="editRuleComment" class="form-control" value="{{ .Comment }}">
+                                <input type="text" name="editRuleComment" class="form-control" value="{{ if $me }}{{ index $me "editRuleComment" }}{{ else }}{{ .Comment }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "path" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPath" }}"></i> :</label>
-                                <input type="text" name="editRulePath" class="form-control" value="{{ .Path }}">
+                                <input type="text" name="editRulePath" class="form-control" value="{{ if $me }}{{ index $me "editRulePath" }}{{ else }}{{ .Path }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "localDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipLocalDir" }}"></i> :</label>
-                                <input type="text" name="editRuleLocalDir" class="form-control" value="{{ .LocalDir }}">
+                                <input type="text" name="editRuleLocalDir" class="form-control" value="{{ if $me }}{{ index $me "editRuleLocalDir" }}{{ else }}{{ .LocalDir }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "remoteDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipRemoteDir" }}"></i> :</label>
-                                <input type="text" name="editRuleRemoteDir" class="form-control" value="{{ .RemoteDir }}">
+                                <input type="text" name="editRuleRemoteDir" class="form-control" value="{{ if $me }}{{ index $me "editRuleRemoteDir" }}{{ else }}{{ .RemoteDir }}{{ end }}">
                             </div>
                             <hr style="border-top: 1px solid #ababab;">
                             <div class="form-input">
                                 <label class="col-form-label">{{ index $.tab "tmpLocalRcvDir" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTmpLocalRcvDir" }}"></i> :</label>
-                                <input type="text" name="editRuleTmpLocalRcvDir" class="form-control" value="{{ .TmpLocalRcvDir }}">
+                                <input type="text" name="editRuleTmpLocalRcvDir" class="form-control" value="{{ if $me }}{{ index $me "editRuleTmpLocalRcvDir" }}{{ else }}{{ .TmpLocalRcvDir }}{{ end }}">
                             </div>
                         </div>
                         <div class="modal-footer">
